Updates for Revised Prototype

--- a/src/app/assignments/project/page.mdx
+++ b/src/app/assignments/project/page.mdx
@@ -325,12 +325,24 @@ Submit via Canvas.
 
 ### Revised Prototype
 
-<UnderDevelopment display={true} />
-
-Continue design and development,
-implementing at least two of the task scenarios in your interactive prototype.
+<UnderDevelopment display={false} />
 
 Collaborate with assigned groups to conduct two peer critiques, using the provided template.
+- To simplify the matching process, 
+  we are assigning each group to do peer critique with the group before and after themselves in alphabetical order. 
+  For example, Group B will conduct peer critiques with Group A and Group C.
+- You may do this at any point in your process
+  (e.g., an early critique might consider the initial prototype’s implementation of one task, 
+  a later critique might consider a more polished implementation of both tasks).
+
+Submit two completed peer critiques.
+- Author these assignments in the Drive folder corresponding to your project group.
+- Create a subfolder called "Revised Prototype", keep all documents in this folder.
+- Begin by copying the provided template document.
+- Ensure these include your takeaways.
+
+Continue design and development,
+implementing both of the tasks in your interactive prototype.
 
 Submit an update on your interactive prototype that does not exceed 600 words.
 - Author this assignment in the Drive folder corresponding to your project group.
@@ -340,15 +352,15 @@ Submit an update on your interactive prototype that does not exceed 600 words.
 - Images do not count against the word limit.
 
 Include the following sections:
-- Describe the task scenarios currently implemented in your interactive prototype.
+- Describe the tasks currently implemented in your interactive prototype.
   - This does not count against the word limit.
-  - Limit this to a single sentence per implemented task scenario.
+  - Limit this to a single sentence per implemented task.
   - These sentences may be taken from the design status report,
     but you should ensure they reflect what is actually implemented in your interactive prototype.
 - Summarize the most important changes or new details in your design,
   as developed through your continuing design and implementation efforts in your interactive prototype.
   - This must not exceed 250 words.
-  - Describe how feedback or work toward implementing the task scenarios prompted you to
+  - Describe how feedback or work toward implementing the tasks prompted you to
     change aspects of your design or define new details in aspects of your design.
     Be sure to describe the relationship between your evolving understanding and the resulting changes.
     For example, describe specific feedback, implementation issues, usability issues, or other issues revealed in your prototyping.
@@ -356,8 +368,9 @@ Include the following sections:
   - If your progress has not motivated changes or the definition of new details,
     instead describe how your progress validates specific aspects of your existing design.
   - If your progress has not required navigating meaningful issues,
-    consider that you may need to change or grow the scope of your design and your scenarios.
+    consider that you may need to change or grow the scope of your design.
   - Note you will separately provide updated task scenarios in your design status report.
+    That will call attention to where course staff can see these changes or details in your walkthrough.
 - Describe one thing you learned or insight you gained through progress in design and development of your prototype.
   - This must not exceed 200 words.
   - We are open to a wide range of learning as part of this assignment,
@@ -387,16 +400,12 @@ Include the following sections:
 
 Submit a Design Status Report as a separate document.
 - Follow guidance in <SiteLink linkKey={SiteLinks.assignmentsProjectDesignStatusReports}/>.
-- Be sure the report captures your current thinking for all task scenarios,
-  including any you have not yet implemented in your prototype.
-- Be sure implemented scenarios include screen captures, updated from prior sketches.
-
-Submit the two completed peer critiques.
-- Ensure these include your takeaways.
+- Be sure the report captures your current design for all tasks.
+- Be sure implemented tasks include screen captures, updated from prior sketches.
 
 Submit a video demonstrating key functionality of your interactive prototype.
-- Must not exceed 2 minutes in length per demonstrated task scenario.
-- Include narration explaining how the task scenario is supported in the prototype.
+- Must not exceed 3 minutes in length per demonstrated task.
+- Include narration explaining how the task is supported in the prototype.
 
 Ensure the full code of your interactive prototype is committed to your GitLab project.
 - Include a brief README.md that details how to build and run your prototype.
@@ -422,7 +431,7 @@ Present your work in a visual form that quickly conveys its most important aspec
   - The need, opportunity, or problem explored in your design.
   - The overall concept of your design and your focus within that concept.
 - Key Human-AI Interaction Functionality
-  - This likely corresponds to your 3 task scenarios.
+  - This likely corresponds to your 2 tasks.
 - Key Findings, Insights, or Learnings
   - Include 3 key findings, insights, or learnings.
   - At least 1 should relate to your interface design.
