Peer Critique Signup

--- a/src/app/assignments/project/page.mdx
+++ b/src/app/assignments/project/page.mdx
@@ -328,9 +328,8 @@ Submit via Canvas.
 <UnderDevelopment display={false} />
 
 Collaborate with assigned groups to conduct two peer critiques, using the provided template.
-- To simplify the matching process, 
-  we are assigning each group to do peer critique with the group before and after themselves in alphabetical order. 
-  For example, Group B will conduct peer critiques with Group A and Group C.
+- To simplify the matching process, you will both give and receive critique from the same groups.
+- Match for peer critique in the provided signup document shared by the entire class.
 - You may do this at any point in your process
   (e.g., an early critique might consider the initial prototype’s implementation of one task, 
   a later critique might consider a more polished implementation of both tasks).
