Post Text and Templates

--- a/src/app/assignments/project/page.mdx
+++ b/src/app/assignments/project/page.mdx
@@ -420,7 +420,7 @@ Submit via Canvas.
 
 ### Poster
 
-<UnderDevelopment display={true} />
+<UnderDevelopment display={false} />
 
 Create a poster that communicates your design and related findings, insights, or learnings.
 Present your work in a visual form that quickly conveys its most important aspects. Your poster should include:
@@ -443,7 +443,10 @@ The staff have assembled several templates you can use as a starting point:
 - <a href={Paths.basePath + pathPosterTemplateB}>Powerpoint Template B</a>
 - <a href={Paths.basePath + pathPosterTemplateC}>Powerpoint Template C</a>
 
-You should heavily modify the template to be unique and represent your project:
+You may use any desired tool to create your poster.
+These templates are designed to print in the correct size
+and to convey an appropriate information density, but are otherwise not good examples.
+If you use a template, you should heavily modify the template to be unique and represent your project:
 
 - Posters are intended to support a conversation about your project.
 - Your poster should emphasize images and include limited amounts of text.
