Final Prototype Revisions

--- a/src/app/assignments/project/page.mdx
+++ b/src/app/assignments/project/page.mdx
@@ -469,10 +469,10 @@ We then expect teams to be available and responsive via email for feedback and r
 
 ### Final Prototype
 
-<UnderDevelopment display={true} />
+<UnderDevelopment display={false} />
 
 Continue design and development,
-implementing the three task scenarios in your interactive prototype.
+refining details of the two tasks in your interactive prototype.
 
 Conduct at least one usability test with a participant.
 The participant may not be a classmate.
@@ -511,7 +511,7 @@ Include the following sections:
 - Summarize the most important changes or new details in your design,
   as developed through your continuing design, implementation, and usability testing efforts in your interactive prototype.
   - This must not exceed 250 words.
-  - Describe how feedback, work toward implementing the task scenarios, or insights from usability testing
+  - Describe how feedback, work toward implementing the task, or insights from usability testing
     prompted you to change aspects of your design or define new details in aspects of your design.
     Be sure to describe the relationship between your evolving understanding and the resulting changes.
     For example, describe specific feedback, implementation issues, usability issues, or other issues revealed in your prototyping.
@@ -539,23 +539,19 @@ Include the following sections:
 
 Submit a Design Status Report as a separate document.
 - Follow guidance in <SiteLink linkKey={SiteLinks.assignmentsProjectDesignStatusReports}/>.
-- Be sure the report captures your current thinking for all task scenarios,
-  including any you have not yet implemented in your prototype.
+- Be sure the report captures your current design for all tasks.
 - Be sure implemented scenarios include screen captures, updated from prior sketches.
 
 Submit a video demonstrating key functionality of your interactive prototype.
-- Must not exceed 2 minutes in length per demonstrated task scenario.
-- Include narration explaining how the task scenario is supported in the prototype.
+- Must not exceed 3 minutes in length per demonstrated task.
+- Include narration explaining how the task is supported in the prototype.
 - As you prepare this video, be mindful of two future needs.
   - Your presentation may want to use a short video segment to convey an interaction.
-  - We strongly encourage you to create a video that can be silently played on a loop during the poster showcase
+  - We encourage you to create a video that can be silently played on a loop during the poster showcase
     (e.g., on a laptop or tablet alongside your poster).
     This could be a silent title slide for each task scenario, then a short video segment of that task scenario.
-- If helpful or needed, you may submit multiple videos in this assignment.
-  Be sure each video is clearly named to indicate what we will see in that video.
-  For example, you might submit a short and polished video conveying the interaction in each task scenario,
-  appropriate for later re-use and without any narration.
-  You might then also submit a longer unedited version of the same video, including narration intended for course staff.
+- Your submission of this video should be a narrated version intended for course staff,
+  but you may want to also gather other video snippets for these potential future needs.
 
 Ensure the full code of your interactive prototype is committed to your GitLab project.
 - Include a brief README.md that details how to build and run your prototype.
