Final Presentation and Poster

--- a/src/app/assignments/project/page.mdx
+++ b/src/app/assignments/project/page.mdx
@@ -567,7 +567,7 @@ Submit via Canvas.
 
 ### Presentation
 
-<UnderDevelopment display={true} />
+<UnderDevelopment display={false} />
 
 Prepare a presentation of your project:
 - Begin by copying the provided template document.
@@ -576,17 +576,17 @@ Your presentation should include:
 - Motivation and Approach
   - The need, opportunity, or problem explored in your design.
   - The overall concept of your design and your focus within that concept.
-- 3 Task Scenarios
+- 2 Tasks
   - Briefly convey what the interaction is
     (e.g., with a few images from a scenario walkthrough, with a short video segment).
   - Briefly convey a relevant aspect of the implementation.
     This should typically be about the underlying AI implementation,
-    but you can convey what was most important and unique in implementing this task scenario.
+    but you can convey what was most important and unique in implementing this task.
 - 2 Key Findings, Insights, or Learnings
   - From across the entire project sequence,
     share a finding, insight, or learning that feels most important or had the most impact on your project.
 
-Presentations should be 6 to 8 minutes in length, which will allow time for discussion and questions.
+Presentations should be 5 to 7 minutes in length, which will allow time for discussion and questions.
 
 **Slides Due:** {formatCalendarDate(calendarData.assignments.projectSlides.date, "EEE MMM d")}, 8pm
 
@@ -596,7 +596,7 @@ Presentations should be 6 to 8 minutes in length, which will allow time for disc
 
 ### Poster Showcase
 
-<UnderDevelopment display={true} />
+<UnderDevelopment display={false} />
 
 The final poster showcase will be during the same time as class, but in the CSE/Allen atrium.
 The course staff will print your poster, and event staff will provide an easel, a mounting board, and a table.
@@ -606,7 +606,7 @@ During the final poster session:
 - You should otherwise engage with other posters and teams around their work.
 - You should be prepared to further show and discuss your prototype via demo or video.
 
-We strongly encourage you to create a video that can be silently played on a loop during the poster showcase
+We encourage you to create a video that can be silently played on a loop during the poster showcase
 (e.g., on a laptop or tablet alongside your poster).
 This could be a silent title slide for each task scenario, then a short video segment of that task scenario.
 
