Clarify Language on Multiple Usability Tests

--- a/src/app/assignments/project/page.mdx
+++ b/src/app/assignments/project/page.mdx
@@ -476,6 +476,8 @@ refining details of the two tasks in your interactive prototype.
 
 Conduct at least one usability test with a participant.
 The participant may not be a classmate.
+If this usability test does not surface at least two key insights,
+consider revisiting your method and then conducting another usability test.
 
 Submit a report that does not exceed 750 words.
 
